fix spacings settings
variable name is now correct

--- a/stylesheets/sass/01-settings/_settings.defaults.scss
+++ b/stylesheets/sass/01-settings/_settings.defaults.scss
@@ -90,15 +90,15 @@ $base-container-width: 750px;
 // # Spacing
 //
 // InuitCSS settings for margin and spacing
-$enable-margins         : true;
-$enable-paddings        : true;
+$inuit-enable-margins         : true;
+$inuit-enable-paddings        : true;
 
-$enable-margins--none   : true;
-$enable-paddings--none  : true;
+$inuit-enable-margins--none   : true;
+$inuit-enable-paddings--none  : true;
 
 
-$enable-margins--large  : true;
-$enable-paddings--large : true;
+$inuit-enable-margins--large  : true;
+$inuit-enable-paddings--large : true;
 
 
 
